# storm-gallery

./: .gitignore  LICENSE  README.md  README.rst
applications/deforestation-detection/: Makefile  README.md  Vagrantfile  pyproject.toml
applications/deforestation-detection/analysis/: pyproject.toml  reproduction-analysis.ipynb
applications/deforestation-detection/bootstrap/: base.sh
applications/deforestation-detection/checksums/: md5sums.txt  sha256sums.txt  sha512sums.txt
applications/deforestation-detection/compendium/endmember-selection/: .dockerignore  .gitignore  Dockerfile  Makefile  build.sh  environment.yml  pyproject.toml  run.sh  settings.py  workbench.toml
applications/deforestation-detection/compendium/endmember-selection/analysis/: 01_generate_vrt.py  02_select_endmembers.py  workflow.toml
applications/deforestation-detection/compendium/endmember-selection/spectral_selector/: __init__.py  selector.py  virtual.py
applications/deforestation-detection/compendium/evaluate-classification/: .gitignore  Dockerfile  Makefile  build.sh  environment.yml  pyproject.toml  run.sh  workbench.toml
applications/deforestation-detection/compendium/evaluate-classification/analysis/: 01_normalize-samples.py  02_extract-predicted-classes.py  03_evaluate.py  settings.py  workflow.toml
applications/deforestation-detection/compendium/evaluate-classification/evaluator/: __init__.py  sample.py
applications/deforestation-detection/compendium/fraction-classification/: .Rbuildignore  .dockerignore  DESCRIPTION  Dockerfile  LICENSE  LICENSE.md  Makefile  NAMESPACE  README.Rmd  README.md  build.sh  environment.yml  run.sh  runtime.txt  workbench.toml
applications/deforestation-detection/workflow/: 01-exe-endmember-selection.sh  02-exe-fraction-classification.sh  03-exe-evaluate-classification.sh  04-rep-prepare-environment.sh  05-rep-endmember-selection.sh  06-rep-fraction-classification.sh  07-rep-evaluate-classification.sh
applications/sits-article/: Makefile  Vagrantfile  bootstrap.sh  pyproject.toml
applications/sits-article/bootstrap/: docker.sh
applications/sits-article/compendium/: DESCRIPTION  Dockerfile  LICENSE  Makefile  NAMESPACE  Stormfile.cerrado.yaml  Stormfile.mato-grosso.yaml  build.sh  environment.yml  run.sh  workbench.toml
applications/sits-article/compendium/R/: classify.R  filter.R  samples.R  tiles.R
applications/sits-article/compendium/man/: filter.Rd  samples.Rd  tiles.Rd
applications/sits-article/compendium/renv/: activate.R
applications/sits-article/compendium/workflow/: Stormfile.matogrosso.yaml
applications/sits-article/workflow/cerrado/: 01-exe-cerrado-classification.sh  02-rep-prepare-environment.sh  03-rep-cerrado-classification.sh
applications/sits-article/workflow/matogrosso/: 01-exe-matogrosso-classification.sh  02-rep-prepare-environment.sh  03-rep-matogrosso-classification.sh
(+193 files in other folders)
