[tool.poetry]
name = "deforestation-detection"
version = "0.1.0"
description = ""
authors = ["Felipe Carlos <efelipecarlos@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.0"
rasterio = "^1.3.2"
notebook = "^6.4.12"
Jinja2 = "3.0.3"  # solving jupyter notebook error
mistune = "0.8.4"  # solving jupyter notebook error
papermill = "^2.4.0"
is-equal = { git = "https://github.com/storm-platform/is.equal", rev = "main" }
pydash = "^5.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
