[tool.poetry]
name = "evaluator"
version = "0.1.0"
description = "Research Compendium to evaluate deforestation accuracy"
authors = ["Felipe Menino Carlos <efelipecarlos@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
rasterio = "^1.2.10"
pandas = "^1.3.5"
scikit-learn = "^1.0.2"
geopandas = "^0.10.2"
dynaconf = "^3.1.7"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
